Fix mob cloning and add NormalMob to map